<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo1"
    tools:context=".CalculoUltimo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="281dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="@string/nome"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.134"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064" />

            <TextView
                android:id="@+id/txtRespNome"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="229dp"
                android:layout_height="54dp"
                android:text="@string/nomePro"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.134"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064" />

            <TextView
                android:id="@+id/txtRespNomeP"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:scrollHorizontally="false"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.144" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="98dp"
                android:layout_height="33dp"
                android:text="@string/area"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.134"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.144" />

            <TextView
                android:id="@+id/txtRespArea"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.22" />

            <TextView
                android:id="@+id/txtResp1"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.411" />

            <TextView
                android:id="@+id/txtPorcent20"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtPorcent35"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtPorcent80"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtResp2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.528" />

            <TextView
                android:id="@+id/txtCurso1"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtCurso2"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtCurso3"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtCurso4"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtCurso5"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtResp3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.624" />

            <TextView
                android:id="@+id/txtNatu"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/txtResp4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.727" />

            <Button
                android:id="@+id/btnVoltar2"
                android:layout_width="131dp"
                android:layout_height="46dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/voltar"
                app:backgroundTint="#5D0178"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9"
                tools:text="@string/voltar" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>